[gd_scene load_steps=15 format=3 uid="uid://bb34uuql5hakt"]

[ext_resource type="Script" uid="uid://cr7ik7qirlrp7" path="res://scenes/game_ui/game_ui.gd" id="1_1i64n"]
[ext_resource type="LabelSettings" uid="uid://cgpmxuu0ucphg" path="res://label_75.tres" id="2_najyh"]
[ext_resource type="Texture2D" uid="uid://dhcfq1juug1ru" path="res://assets/sprites/UI/textGetReady.png" id="3_2cwxn"]
[ext_resource type="Texture2D" uid="uid://c42nhwabeqalv" path="res://assets/sprites/UI/tapTick.png" id="4_hk0ve"]
[ext_resource type="Texture2D" uid="uid://i226rtrqfqpn" path="res://assets/sprites/UI/textGameOver.png" id="5_pxslt"]
[ext_resource type="Texture2D" uid="uid://bs0v2bu31y61k" path="res://assets/sprites/UI/UIbg.png" id="6_d1cf8"]
[ext_resource type="LabelSettings" uid="uid://i6yjssay2bnn" path="res://label_32_yellow.tres" id="7_26vp0"]
[ext_resource type="Texture2D" uid="uid://b2akkjgeahful" path="res://assets/sprites/UI/medalBronze.png" id="8_8dbna"]
[ext_resource type="Texture2D" uid="uid://duxaechd3165o" path="res://assets/sprites/UI/buttonLarge.png" id="9_p4df2"]
[ext_resource type="FontFile" uid="uid://due6jbyye53ld" path="res://assets/fonts/font_score.ttf" id="10_o440j"]

[sub_resource type="LabelSettings" id="LabelSettings_2wosu"]
font = ExtResource("10_o440j")
font_size = 55
outline_size = 16
outline_color = Color(0.7550102, 0.40288153, 0.2559203, 1)

[sub_resource type="Animation" id="Animation_8qcbp"]
resource_name = "play"
length = 0.8
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/StartMenu/TextureRect2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2), Vector2(1, 1), Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_t24f4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/StartMenu/TextureRect2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e13be"]
_data = {
&"RESET": SubResource("Animation_t24f4"),
&"play": SubResource("Animation_8qcbp")
}

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_1i64n")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "0"
label_settings = ExtResource("2_najyh")

[node name="StartMenu" type="Control" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/StartMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 73.0
grow_horizontal = 2
texture = ExtResource("3_2cwxn")

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/StartMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = 28.0
offset_right = 29.5
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_hk0ve")

[node name="GameOverMenu" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer/GameOverMenu"]
layout_mode = 2
texture = ExtResource("5_pxslt")

[node name="Panel" type="TextureRect" parent="MarginContainer/GameOverMenu"]
layout_mode = 2
texture = ExtResource("6_d1cf8")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/GameOverMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GameOverMenu/Panel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Medal"
label_settings = ExtResource("7_26vp0")
horizontal_alignment = 1

[node name="MedalImg" type="TextureRect" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_8dbna")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "score"
label_settings = ExtResource("7_26vp0")
horizontal_alignment = 1

[node name="currentScore" type="Label" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = ExtResource("2_najyh")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "best"
label_settings = ExtResource("7_26vp0")
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "50"
label_settings = ExtResource("2_najyh")
horizontal_alignment = 1

[node name="PlayButton" type="TextureButton" parent="MarginContainer/GameOverMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("9_p4df2")

[node name="Label" type="Label" parent="MarginContainer/GameOverMenu/PlayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -30.5
offset_right = 34.5
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
text = "OK"
label_settings = SubResource("LabelSettings_2wosu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_e13be")
}
autoplay = "play"

[connection signal="pressed" from="MarginContainer/GameOverMenu/PlayButton" to="." method="_on_play_button_pressed"]
