extends CanvasLayer
class_name GameUI

const MEDAL_BRONZE = preload("uid://b2akkjgeahful")
const MEDAL_GOLD = preload("uid://c5q8rpg33holx")
const MEDAL_SILVER = preload("uid://be7nyiw44n3bu")

@onready var medal_img: TextureRect = %MedalImg
@onready var current_score: Label = %currentScore
@onready var high_score: Label = %HighScore

@onready var start_menu: Control = %StartMenu
@onready var score_label: Label = %ScoreLabel
@onready var game_over_menu: VBoxContainer = %GameOverMenu

func _ready() -> void:
	score_label.text = "0"

func update_score(value: int) -> void:
	score_label.text = str(value)

func calculte_score(score: int, high: int) -> void:
	current_score.text = str(score)
	high_score.text = str(high)
	if score >= 10:
		medal_img.texture = MEDAL_GOLD
	elif score >= 5:
		medal_img.texture = MEDAL_SILVER
	else:
		medal_img.texture = MEDAL_BRONZE

func game_over() -> void:
	game_over_menu.show()
	score_label.hide()

func _on_play_button_pressed() -> void:
	get_tree().reload_current_scene()
